# secure96

./: .checkpatch.conf  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.rst
atsha204a/: CMakeLists.txt
atsha204a/include/: cmd.h  crc.h  debug.h  defines.h  i2c_linux.h  io.h  packet.h  personalize.h  status.h
atsha204a/scripts/: atsha204a_test_mac.py  atsha204a_test_sha.py
atsha204a/src/: cmd.c  config.c  crc.c  debug.c  i2c_linux.c  io.c  main.c  packet.c  personalize.c
atsha204a/tests/: CMakeLists.txt  tests.c
include/: cmd.h  crc_local.h  debug.h  defines.h  device.h  i2c_linux.h  io.h  status.h
s96at/: CMakeLists.txt
s96at/include/: cmd.h  crc.h  debug.h  device.h  i2c_linux.h  io.h  packet.h  personalize.h  s96at.h  s96at_private.h  sha.h  status.h
s96at/src/: cmd.c  crc.c  debug.c  device.c  i2c_linux.c  io.c  main.c  packet.c  personalize.c  s96at.c  sha.c
s96at/tests/: CMakeLists.txt  tests.c
src/: cmd.c  crc_local.c  debug.c  i2c_linux.c  io.c  main.c  packet.c  personalize.c
src/gpl/: crc.c
